--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,20 @@ jobs:
   deploy-website:
     runs-on: ubuntu-18.04
     steps:
-      - name: Project checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-         with:
-         node-version: 14
-      - name: Build
-        run: |
-          yarn build
-      - name: Deploy website
-        if: success()
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: upload/sa/model # The folder the action should deploy.
-          SINGLE_COMMIT: true
+    - name: Project checkout
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 14
+    - name: Build
+    - run: yarn build
+    - name: Deploy website
+    if: success()
+    uses: JamesIves/github-pages-deploy-action@releases/v3
+    with:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      BRANCH: gh-pages # The branch the action should deploy to.
+      FOLDER: upload/sa/model # The folder the action should deploy.
+      SINGLE_COMMIT: true
+    
+      
