--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,19 +10,18 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - name: Project checkout
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+      uses: actions/checkout@v3
+    - name: Setup Node
+      uses: actions/setup-node@v3
       with:
         node-version: 14
     - name: Build
-    - run: yarn build
+      run: yarn build
     - name: Deploy website
-    if: success()
-    uses: JamesIves/github-pages-deploy-action@releases/v3
-    with:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: gh-pages # The branch the action should deploy to.
-      FOLDER: upload/sa/model # The folder the action should deploy.
-      SINGLE_COMMIT: true
-    
-      
+      if: success()
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages # The branch the action should deploy to.
+        FOLDER: upload/sa/model # The folder the action should deploy.
+        SINGLE_COMMIT: true
